--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@
 
 .seccion-home {
     width: 100%;
-    height: 110vh;
+    height: 120vh;
     background-image: url("/img/434513147-felicitar-rendimiento-aplaudir-empleado.jpg");
     background-size: cover;
 }
@@ -145,14 +145,12 @@
     margin-top: 35px;
 }
 
-.box
 .subtitulo {
     font-weight: bold;
 }
 
-.box
 .anio {
-    color: rgb(251, 36, 106);
+    color: rgb(119, 54, 76);
 }
 
 .categories button {
@@ -206,3 +204,125 @@
     border: 1px solid rgb(139, 146, 221);
     color: rgb(139, 146, 223);
 }
+
+/* Section Featured Job */
+.featured-job {
+    height: 175vh;
+    text-align: center;
+    font-family: Humnst777 CN BT;
+}
+
+
+.box-jobs {
+    width: 71.5%;
+    margin: auto;
+}
+
+.items-jobs {
+    display: flex;
+    padding: 30px;
+    border: 1px solid black;
+    margin-top: 35px;
+}
+
+.items-jobs img {
+    width: 140px;
+    height: 100px;
+    border: 1px solid rgb(139, 146, 221);
+    border-radius: 5px;
+}
+
+.box-text {
+    width: 685px;
+    text-align: left;
+    margin-left: 30px;
+}
+
+.box-text h2 {
+    font-size: 30px;
+}
+
+.box-text ul {
+    list-style: none;
+    display: flex;
+    font-size: 18px;
+    margin-left: -40px;
+    margin-top: 10px;
+}
+
+.box-text ul li {
+    padding-right: 90px;
+    color: grey;
+}
+
+.box-btn button {
+    padding: 8px 40px;
+    font-size: 17px;
+    border-radius: 35px;
+    background-color: white;
+    border: 1px solid rgb(139, 146, 221);
+    color: rgb(139, 146, 223);
+}
+
+.box-btn p {
+    font-size: 18px;
+    margin-top: 33px;
+    margin-left: -70px;
+}
+
+/* Section Works */
+
+.works {
+    height: 145vh;
+    text-align: center;
+    font-family: Humnst777 CN BT;
+    background-color: rgb(31, 43, 123);
+    margin-top: 80px;
+}
+
+.works p {
+    display: inline-block;
+    margin-top: 150px;
+}
+
+.works h1 {
+    color: white;
+}
+
+.box-works {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.works-items {
+    width: 400px;
+    height: 360px;
+    margin: 17px;
+    background-color: rgb(38, 49, 127);
+    padding: 35px;
+}
+
+.works-items img {
+    width: 100px;
+    height: 100px;
+    margin-top: 35px;
+}
+
+.works-items h3 {
+    color: white;
+    font-size: 30px;
+}
+
+.works-items p {
+    margin-top: 10px;
+    padding: 5px;
+    font-weight: none;
+    color: rgb(161, 170, 202);
+    font-size: 20px;
+    line-height: 1.5em;
+}
+
+
