--- a/css/style.css
+++ b/css/style.css
@@ -325,4 +325,136 @@
     line-height: 1.5em;
 }
 
+/* Section slider */
+
+.contenedor {
+    font-family: Humnst777 CN BT;
+    width: 58%;
+    height: 120vh;
+    display: flex;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slider-contenedor {
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+}
+
+.contenido-slider {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-shrink: 0;
+}
+
+.user {
+    text-align: center;
+}
+
+.user h2 {
+    margin-top: 20px;
+}
+
+.rol {
+    font-size: 17px;
+    color: grey;
+    margin-top: 15px;
+    margin-bottom: 35px;
+}
+
+.descripcion {
+    font-size: 30px;
+    font-style: italic;
+    line-height: 1.4em;
+    padding: 0 10px;
+}
+
+.user img {
+    width: 300px;
+    border-radius: 100%;
+}
+
+
+/* Section Talented jobs */
+
+.talented {
+    width: 85%;
+    height: 145vh;
+    display: flex;
+    margin: auto;
+}
+
+.contenedor-text .titulo2 {
+    margin-top: 100px;
+}
+
+.contenedor-text {
+    font-family: Humnst777 CN BT;
+    width: 98%;
+    padding: 0 60px;
+}
+
+.desc-talented-1 {
+    line-height: 1.5em;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.desc-talented-2 {
+    margin-top: 50px;
+    line-height: 1.5em;
+    font-size: 21px;
+    color: grey;
+}
+
+.contenedor-text button {
+    margin-top: 40px;
+    padding: 25px 68px;
+    border-radius: 5px;
+    background-color: rgb(251, 36, 106);
+    border: 0;
+    font-size: 17px;
+    color: white;
+}
+
+.contenedor-image {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-image: url("/img/25854389-hombre-de-negocios-con-un-dilema-sentado-en-su-silla-de-oficina-frente-a-la-cámara-con-las-manos-y-j.webp");
+    background-size: cover;
+    background-position: center;
+}
+
+.contenedor-talented {
+    position: relative;
+    height: 145vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 200px;
+}
+
+.since {
+    background-color: rgb(31, 43, 123);
+    position: absolute;
+    padding: 40px 33px;
+    border-radius: 7px;
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    font-family: Humnst777 CN BT;
+    margin-left: 80px;
+}
+
+
+
+
+
+
+
 
