--- a/css/style.css
+++ b/css/style.css
@@ -452,6 +452,190 @@
 }
 
 
+/* SECTION RECENT */
+
+.recent {
+    height: 170vh;
+    font-family: Humnst777 CN BT;
+}
+
+.recent .titulo2,.titulo-browse {
+    text-align: center;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    width: 85%;
+    margin: auto;
+}
+
+.col {
+    width: 49%;
+    position: relative;
+    border: 2px solid rgb(247, 247, 247);
+    margin: 0 15px;
+}
+
+.col img {
+   width: 100%;
+   height: 50%;
+}
+
+.box-now {
+    background-color: rgb(255, 36, 36);
+    color: white;
+    position: absolute;
+    display: flex;
+    width: 25%;
+    height: 22.3%;
+    margin-top: -24%;
+    font-size: 28px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.box-now h1 {
+    width: 50%;
+}
+
+.texto-recent {
+    background-color: white;
+    padding: 5% 10%;
+}
+
+.texto-recent p {
+    font-size: 20px;
+    border-left: 1px solid black;
+    padding-left: 2%;
+    color: grey;
+    margin: 2% 0%;
+}
+
+.texto-recent h2 {
+    font-size: 35px;
+    padding: 5% 0;
+    color: rgb(25, 29, 52);
+}
+
+.texto-recent a {
+    text-decoration: none;
+    color: rgb(25, 29, 52);
+}
+
+/* Section pie de pagina */
+
+.pie-pagina {
+    height: 150vh;
+    background-color: rgb(1, 11, 29);
+    display: flex;
+    font-family: Humnst777 CN BT;
+    position: relative;
+}
+
+.row-pie {
+    width: 89%;
+    display: flex;
+    margin-top: 15%;
+    height: 45%;
+    margin: auto;
+}
+
+.columna {
+    display: block;
+    flex: 20%;
+    padding: 0 20px;
+}
+
+.columna h2 {
+    color: white;
+}
+
+.columna p {
+    margin-top: 8%;
+    font-size: 20px;
+    color: rgb(220, 213, 213);
+    line-height: 1.5em;
+}
+
+.columna a {
+    font-size: 20px;
+    text-decoration: none;
+    color: rgb(220, 213, 213);
+}
+
+.columna ul {
+    list-style: none;
+    margin-top: 25px;
+    margin-left: -40px;
+    font-size: 20px;
+}
+
+.columna ul li a {
+    text-decoration: none;
+    color: rgb(220, 213, 213);
+}
+
+.columna input {
+    margin-top: 50px;
+    height:48px;
+    width: 100%;
+    padding: 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.columna img {
+    margin-top: 190px;
+}
+
+.columna .text-pie1 {
+    display: flex;
+    height: 56%;
+    color: purple;
+    align-items: flex-end   ;
+}
+
+.columna .text-pie2 {
+    display: flex;
+    height:56.7%;
+    color: purple;
+    align-items: flex-end   ;
+}
+
+.columna .text-pie3 {
+    display: flex;
+    height: 48.5%;
+    color: purple;
+    align-items: flex-end   ;
+}
+.columna .text-pie1 p{
+    font-size: 25px;
+}
+.columna .text-pie2 p{
+    font-size: 25px;
+}
+
+.columna .text-pie3 p{
+    font-size: 25px;
+}
+
+.footer {
+    height: 100px;
+    width: 87%;
+    border-top: 2px solid white;
+    margin: -7.5% 100px;
+    position: absolute;
+    color: white;
+}
+
+.footer p {
+    padding: 40px 0;
+}
+
+
 
 
 
